--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,50 @@
-# Logs
-logs
-*.log
+# Node.js dependencies
+node_modules/
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+
+# Vite build output
+dist/
+.vite/
+.cache/
+
+# Environment variables
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# Editor and OS-specific files
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+*.sublime-workspace
+
+# MacOS and Linux
+.DS_Store
+._*
+Thumbs.db
+
+# Logs and debugging
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+*.log
+*.gz
 
-node_modules
-dist
-dist-ssr
-*.local
+# Jest and testing
+coverage/
+jest-cache/
+jest-config.js
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Storybook
+.storybook/
+out/
+
+# Tailwind CSS JIT Cache
+.tailwind/
